[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/AdventureRoad.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://scripts/RoadHUD.gd" type="Script" id=3]
[ext_resource path="res://font/NotoSerifSC-Regular.otf" type="DynamicFontData" id=4]

[sub_resource type="TileSet" id=1]
0/name = "icon.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CubeMesh" id=3]

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("Viewport")

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 4 )

[node name="AdventrueRoad" type="Node2D"]
script = ExtResource( 1 )

[node name="ActionRoot" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="ActionRoot"]
position = Vector2( -32, -32 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( -196612, 0, 0, -262144, 0, 0, -262140, 0, 0, -131075, 0, 0, -196605, 0, 0, -65538, 0, 0, -131070, 0, 0, -1, 0, 0, -65535, 0, 0, 65532, 0, 0, 0, 0, 0, 4, 0, 0, 131071, 0, 0, 65537, 0, 0, 196606, 0, 0, 131074, 0, 0, 262141, 0, 0, 196611, 0, 0, 327676, 0, 0, 262144, 0, 0, 262148, 0, 0 )

[node name="Viewport" type="Viewport" parent="."]
editor/display_folded = true
size = Vector2( 256, 256 )
transparent_bg = true
msaa = 2
render_target_v_flip = true

[node name="MeshInstance" type="MeshInstance" parent="Viewport"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 0.627419, 0.778682, 0, -0.778682, 0.627419, 0, 3.48997, 3.77316 )
visible = false

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 0.993612, 0.112849, 0, -0.112849, 0.993612, 0, 1.82133, 6.60192 )
current = true

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="HUDRoot" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuBtn" type="TextureButton" parent="HUD/HUDRoot"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="HUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )

[node name="TextureRect" type="TextureRect" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
texture = SubResource( 4 )

[node name="Menu" type="VBoxContainer" parent="HUD"]
visible = false
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 1.0
alignment = 1

[node name="ContinueBtn" type="Button" parent="HUD/Menu"]
margin_top = 234.0
margin_right = 512.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 5 )
text = "继续"

[node name="SaveBtn" type="Button" parent="HUD/Menu"]
margin_top = 268.0
margin_right = 512.0
margin_bottom = 298.0
custom_fonts/font = SubResource( 6 )
text = "保存"

[node name="SaveBackBtn" type="Button" parent="HUD/Menu"]
margin_top = 302.0
margin_right = 512.0
margin_bottom = 332.0
custom_fonts/font = SubResource( 7 )
text = "返回主菜单"

[node name="SettingBtn" type="Button" parent="HUD/Menu"]
margin_top = 336.0
margin_right = 512.0
margin_bottom = 366.0
custom_fonts/font = SubResource( 8 )
text = "设置"

[node name="SettingMenu" type="VBoxContainer" parent="HUD"]
visible = false
anchor_left = 0.25
anchor_top = 0.1
anchor_right = 0.75
anchor_bottom = 0.9

[node name="SettingBackBtn" type="Button" parent="HUD/SettingMenu"]
margin_right = 512.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 9 )
text = "返回"

[connection signal="pressed" from="HUD/HUDRoot/MenuBtn" to="HUD" method="_on_MenuBtn_pressed"]
[connection signal="pressed" from="HUD/Menu/ContinueBtn" to="HUD" method="_on_ContinueBtn_pressed"]
[connection signal="pressed" from="HUD/Menu/SaveBtn" to="HUD" method="_on_SaveBtn_pressed"]
[connection signal="pressed" from="HUD/Menu/SaveBackBtn" to="HUD" method="_on_SaveBackBtn_pressed"]
[connection signal="pressed" from="HUD/Menu/SettingBtn" to="HUD" method="_on_SettingBtn_pressed"]
[connection signal="pressed" from="HUD/SettingMenu/SettingBackBtn" to="HUD" method="_on_SettingBackBtn_pressed"]
